precompile after adding new image

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -7,4 +7,5 @@ facebook_64.png: facebook_64-8f130f5352bbd02d99d52b833043d865.png
 facebook_128.png: facebook_128-75156eab5111643bd3a8f8b963513228.png
 glyphicons-halflings.png: glyphicons-halflings-f6675c325532ec11a984d58e172b8e2a.png
 application.js: application-b8d95a4676e53092b217f484aee38029.js
+login-facebook-button.png: login-facebook-button-55a42b81d68791851266642155766f93.png
 facebook_32.png: facebook_32-56cd78cb046f8c110edbea8580a52c39.png
