updated to store twitter info in session

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,5 @@
 --- 
+login-twitter-button.png: login-twitter-button-6f9f1136dbba94b5ef405161e409ffe8.png
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 quote_header.jpg: quote_header-1ba131079ce7ace1f04befcfe2889afb.jpg
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
