updated user MVC for login

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,13 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  first_name: MyString
-  last_name: MyString
   email: MyString
-  password: MyString
+  password_hash: MyString
+  password_salt: MyString
 
 two:
-  first_name: MyString
-  last_name: MyString
   email: MyString
-  password: MyString
+  password_hash: MyString
+  password_salt: MyString
